<resources>
    <string name="app_name">Fuelistic</string>
    <string name="hello_there">Hello there, Welcome back…</string>
    <string name="sign_to_cont">Sign in to continue</string>
    <string name="email_mobile_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">New to this experience? SIGN UP!</string>
    <string name="img_description">DESC</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forget_password_detail">Provide your account\'s phone number for which you want to reset your password!</string>
    <string name="next">Next</string>
    <string name="new_credentials">Reset Password</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_credentials_detail">Your account has been recovered. Set your new password!</string>


</resources>