<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignup.Login"
    android:background="#f5deb3"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>


        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_there"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="#ff4500"
            android:textSize="40sp"
            android:textStyle="bold"
            app:fontFamily="@font/aclonica" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/sign_to_cont"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="casual" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="20dp" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email_mobile_number"
                app:hintTextColor="#000000"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="#000000"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:fontFamily="@font/aclonica">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:hintTextColor="#000000"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:fontFamily="@font/aclonica">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remember_me"
                    android:buttonTint="#000000"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/forgot_password"
                    android:textColor="#000000"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


            </RelativeLayout>





            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="#ff4500"
                android:text="LOGIN"
                android:textColor="#000000"
                android:textSize="20dp"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_gravity="center_horizontal"
                android:background="#00000000"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:onClick="callSignUpScreen"
                android:text="New to this experience? SIGN UP!" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>
